京都大学情报学研究科

--- a/大学/京都大学.md
+++ b/大学/京都大学.md
@@ -72,4 +72,45 @@
 - **专门方向的学力**；
 - **专门方向的适合程度**。
 
-##
+## 情报学研究科
+
+参考资料：[募集要項｜入試情報](http://www.i.kyoto-u.ac.jp/admission/application.html)。
+
+申请条件：（第 3 条）在 2022 年 3 月最后一天之前完成 16 年的学校教育。
+
+### 申请流程
+
+|                                |                                                |
+| ------------------------------ | ---------------------------------------------- |
+| AAO 申请                       | 见前文，建议在申请前 1 年 - 2 个月             |
+| 出願                           | 2021 年 6 月 28 日（月）- 7 月 2 日（金）17 時 |
+| 学力検査（筆記試験・口頭試問） | 各专攻有所不同                                 |
+| 合格发表（先端数理科学専攻）   | 2021 年 7 月 23 日 15 时                       |
+| 合格发表（其它専攻）           | 2021 年 8 月 6 日 15 时                        |
+
+### 出願材料
+
+- 入学願書・写真票・受験票※；
+- 成績証明書；
+- 志望説明書：学习和研究的当前情况、动机和入学后的目标，（如果正在或已经完成学士学位论文）论文的主题和内容，应当打印，A4 纸 2 页或更短，申请者姓名应标记在每页顶部；
+- 在留カード又はパスポートの写し：在留卡或护照照片页扫描件；
+- 入学検定料振込書類：申请费采用[线上缴纳](https://www3.univ-jp.com/kyoto-u/sci/)的方式，提供支付完成后「収納証明書」页面的打印件；
+- 入学手続き書類送付用シール（用于日本国内出愿）；
+- 受験票送付用封筒（用于日本国内出愿）；
+- 合否結果通知書送付用封筒（用于日本国内出愿）；
+- あて名票※（用于海外出愿）：回信地址表；
+- TOEFL/TOEIC/IELTS スコア票：提供成绩单的复印件。
+
+海外在读的情况下，可以从[英文网站](http://www.i.kyoto-u.ac.jp/en/admission/application.html)获得申请材料（带※号部分）的 PDF 文件。准考证也会通过邮件提供扫描件。
+
+### 学力検査
+
+#### 通信情報システム専攻
+
+**専門基礎 A**：7 月 31 日 13:00 - 16:00。
+
+从数学（微分积分、线性代数）、数学（复变函数、傅里叶分析、微分方程）、电磁学（静电）、电器电子电路、信息论、数据结构与算法、计算机组成原理、程序语言、图论中出 9 题，从中选择 4 题作答。
+
+**専門基礎 B**：8 月 1 日 9:00 - 12:00。
+
+从通信工程（信息传送、通信网络）、通信基础理论、无线电（电磁波、天线、传播）、逻辑电路、计算机系统、自动机与算法、编译器与操作系统、计算与逻辑中出 8 题，从中选择 4 题作答。
